--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,12 @@ repositories {
     jcenter()
 }
 
-sourceSets {
-    selenium
-}
-
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.13'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
     testCompile 'org.seleniumhq.selenium:selenium-java:2.30.0'
     testCompile 'org.concordion:concordion:2.0.1'
-}
-
-task selenium(type: Test) {
-    testClassesDir = sourceSets.selenium.output.classesDir
-    classpath = sourceSets.selenium.runtimeClasspath
+    testCompile 'org.concordion:concordion-screenshot-extension:1.2.0'
+    testCompile 'com.codeborne:phantomjsdriver:1.2.1'
 }
