afaren - Update build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -9,3 +9,10 @@ dependencies {
     testCompile "org.concordion:concordion:2.0.3"
 }
 
+test {
+    systemProperties['concordion.output.dir'] = "$reporting.baseDir/spec"
+    outputs.upToDateWhen { false } // force it to run even if test code hasn't changed
+    testLogging.showStandardStreams = true
+}
+
+
