--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,18 @@
 apply plugin: 'java'
-apply plugin: 'idea' 
+apply plugin: 'idea'
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    testCompile "org.concordion:concordion:2.0.3"
+    testCompile "org.concordion:concordion:2.0.3",
+            'junit:junit:4.12',
+            'org.hamcrest:hamcrest-all:1.3',
+            "org.concordion:concordion-screenshot-extension:1.2.0",
+            "org.seleniumhq.selenium:selenium-java:[2.43,)",
+            'org.slf4j:slf4j-api:1.7.21'
+    testRuntime 'ch.qos.logback:logback-classic:1.1.7'
 }
 
 test {
