--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ dependencies {
             'junit:junit:4.12',
             'org.hamcrest:hamcrest-all:1.3',
             "org.concordion:concordion-screenshot-extension:1.2.0",
-            "org.seleniumhq.selenium:selenium-java:[2.43,)",
+            "org.seleniumhq.selenium:selenium-java:3.4.0",
             'org.slf4j:slf4j-api:1.7.21'
     testRuntime 'ch.qos.logback:logback-classic:1.1.7'
 }
